objects/Field_Mapping__c.object
<CustomObject>
    <fields>
        <fullName>Exclude_from_su__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Make this checkbox checked if you don&apos;t want this field to be updated from third party platform.</description>
        <inlineHelpText>Make this checkbox checked if you don&apos;t want this field to be updated from third party platform.</inlineHelpText>
        <label>Exclude from Salesforce update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Exclude_from_tpu__c</fullName>
        <defaultValue>false</defaultValue>
        <description>That field is defined to exclude Mapping records in use on code level for look up purposes(like developer id and project id Mapping)
Make it checked for the fields which do not exist on external system.</description>
        <inlineHelpText>That field is defined to exclude Mapping records in use on code level for look up purposes(like developer id and project id Mapping)
Make it checked for the fields which do not exist on external system.</inlineHelpText>
        <label>Exclude from Third Party update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Project</label>
        <referenceTo>copado__Project__c</referenceTo>
        <relationshipLabel>Field Mappings</relationshipLabel>
        <relationshipName>Field_Mappings</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Salesforce_Field_Name__c</fullName>
        <label>Salesforce Field Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Field_Type__c</fullName>
        <description>Default value is set to string if not selected.</description>
        <label>Target Field Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>string</fullName>
                </value>
                <value>
                    <fullName>object</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Third_Party_Field_Name__c</fullName>
        <label>Third Party Field Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Field Mapping</label>
    <nameField>
        <displayFormat>FM-{0000000000}</displayFormat>
        <label>Field Mapping Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Field Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>